Refactor API code for maintainability
* Remove redundant modifiers, semicolons and expressions.
* Make use of pattern variables for more concise code.
* Use sequenced collections for more concise code.
* Fix spelling in a couple of places.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>